Implement obtaining list of search scenarios
